--- a/wanted.html
+++ b/wanted.html
@@ -57,7 +57,7 @@
         <h1>Wanted</h1>
         <h2 id="name">Your Name Here</h2>
         <img id="avatar" src="https://via.placeholder.com/200" alt="Avatar">
-        <p class="reward" id="reward">Reward: $0</p>
+        <p class="reward" id="reward">$50,000</p>
         <p id="details">Enter your own details in the query parameters!</p>
     </div>
 
