--- a/wanted3.html
+++ b/wanted3.html
@@ -61,6 +61,8 @@
         <p id="details">NOTIFY NEAREST LAW ENFORCEMENT AGENCY</p>
     </div>
 
+    <canvas id="canvas" width="600" height="800"></canvas>
+
     <img id="poster-image" src="" alt="Generated Wanted Poster" style="max-width: 100%; height: auto;">
 
     <script>
