--- a/wanted3.html
+++ b/wanted3.html
@@ -47,20 +47,16 @@
         <button onclick="generatePoster()">Generate Poster</button>
     </div>
 
-    <canvas id="canvas" width="600" height="800"></canvas>
-
-    <h2>Your Generated Poster:</h2>
-    <div id="poster-container">
-        <!-- The poster will be displayed here -->
-    </div>
+    <img id="poster-image" src="" alt="Generated Wanted Poster">
 
     <script>
         function generatePoster() {
-            const canvas = document.getElementById('canvas');
+            const canvas = document.createElement('canvas');
             const ctx = canvas.getContext('2d');
 
-            // Clear the canvas
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            // Set canvas size
+            canvas.width = 600;
+            canvas.height = 800;
 
             // Set up the background
             ctx.fillStyle = '#f4f4f4';
@@ -92,12 +88,9 @@
             ctx.fillText(`Bounty: ${bounty}`, 50, 480);
             ctx.fillText(`Description: ${description}`, 50, 510);
 
-            // Display the poster in the poster container
-            const posterContainer = document.getElementById('poster-container');
-            posterContainer.innerHTML = "";  // Clear previous poster
-            const posterImage = new Image();
+            // Convert the canvas to an image
+            const posterImage = document.getElementById('poster-image');
             posterImage.src = canvas.toDataURL('image/png');
-            posterContainer.appendChild(posterImage);
         }
 
         // Generate initial poster when the page loads
