--- a/wanted3.html
+++ b/wanted3.html
@@ -28,6 +28,7 @@
     <div class="container">
         <h1>Wanted Poster</h1>
         <canvas id="posterCanvas" width="350" height="500"></canvas>
+        <img id="posterImage" src="" alt="Wanted Poster Image">
     </div>
 
     <script>
